--- a/index.html
+++ b/index.html
@@ -81,7 +81,7 @@
   <table class="table table table-striped" id="todolist1">
     <thead>
       <tr>
-        <th scope="col">#</th>
+        <th scope="col">No</th>
         <th scope="col">Nama</th>
         <th scope="col">Prioritas</th>
         <th scope="col">Status</th>
