--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
     <thead>
       <tr>
         <th scope="col">No</th>
-        <th scope="col">Nama</th>
+        <th scope="col">Nama Kegiatan</th>
         <th scope="col">Prioritas</th>
         <th scope="col">Status</th>
         <th scope="col">Tanggal</th>
