--- a/form-todolist.html
+++ b/form-todolist.html
@@ -18,7 +18,7 @@
   }
   
   h1 {
-    color: #1976d2;
+    color: deeppink;
     text-align: center;
   }
   
@@ -74,7 +74,7 @@
 </style>
 
 <body class="m-3">
-  <h1>Form To Do List</h1>
+  <h1>Form To Do List 🎀</h1>
   
   <form class="mb-3" id="todo-form">
     <div class="mb-3">
