--- a/ubah-todolist.html
+++ b/ubah-todolist.html
@@ -11,7 +11,7 @@
 </head>
 <style>
   body {
-    background-color: #e1f5fe;
+    background-color: lightpink;
     font-family: Arial, sans-serif;
     margin: 0;
     padding: 20px;
@@ -74,7 +74,7 @@
 </style>
 
 <body class="m-4">
-  <h1>Ubah Data</h1>
+  <h1>Ubah Data 🦋</h1>
   <form class="mb-3">
     <div class="mb-3">
       <label class="form-label">Nama</label>
