--- a/index.html
+++ b/index.html
@@ -85,7 +85,7 @@
   <h1>To Do List</h1>
   
   <!-- Tabel untuk tugas yang belum selesai -->
-  <h2>Tugas Belum Selesai</h2>
+  <h2>Tugas Belum Selesai👉🏻👈🏻</h2>
   <table class="table-info table-striped" id="todolist1">
     
     <thead>
@@ -103,7 +103,7 @@
   </table>
   
   <!-- Tabel untuk tugas yang sudah selesai -->
-  <h2>Tugas Selesai</h2>
+  <h2>Tugas Selesai🤙🏻</h2>
   <table class="table-info table-striped" id="todolist-selesai">
     <thead>
       <tr>
